--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Kamil Bujel"
   avatar           : "Kamil_Bujel.jpg"
   bio              : "MPhil Student in Advanced Computer Science"
-  location         : "Univesity of Cambridge, UK"
+  location         : "University of Cambridge, UK"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=a_o4lxUAAAAJ&hl=en"
